--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,11 @@
+post = Post
 posts = Posts
 writers = Writers
-admin = Admin page
+adminPage = Admin Page
 login = Login
 sub = Subscribe!
+readMore = Read More
+author = Author
+email = Email
+seeAllPosts = See all Posts
+seePosts = See posts
