--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,5 +1,11 @@
-posts = Wpisy
-writers = Pisarze
-admin = Strona Admina
-login = Login
-sub = Obserwuj!
+post=wpisy
+posts=Wpisy
+writers=Autorzy
+adminPage=Strona admina
+login=Zaloguj
+sub=subskrybuj!
+readMore=Czytaj dalej
+author=Autor
+email = Email
+seeAllPosts=Zobacz wszystkie posty
+seePosts=zobacz posty
